Adjusted sword on model. Minor edits
Sword on model doesn't float on edge of fingertips anymore. Edited dialogue system to be more clear on where it's set (NOT within Widget BP, within NPC BP)

--- a/TwoBigSwords/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/TwoBigSwords/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -325,8 +325,8 @@ MaterialEditorInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.Gl
 BoneProxy=BoneProxy.Transforms.Bone,BoneProxy.Transforms.Reference,BoneProxy.Transforms.Mesh Relative
 BlendSpace=BlendSpace.Axis Settings.Horizontal Axis
 BP_EnemyAI_C=BP_EnemyAI_C.Physics.ConstraintsGroup,BP_AI_v2_C.Physics.ConstraintsGroup,SkeletalMeshComponent.Physics.ConstraintsGroup,CapsuleComponent.Physics.ConstraintsGroup
-SkeletalMeshComponent=BP_EnemyAI_C.Physics.ConstraintsGroup,BP_AI_v2_C.Physics.ConstraintsGroup,BP_AI_v2_C.TransformCommon.Transform,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform,CapsuleComponent.Physics.ConstraintsGroup,PropertyWrapper.DefaultValueCategory.dialogue
-CapsuleComponent=
+SkeletalMeshComponent=BP_EnemyAI_C.Physics.ConstraintsGroup,BP_AI_v2_C.Physics.ConstraintsGroup,BP_AI_v2_C.TransformCommon.Transform,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform,CapsuleComponent.Physics.ConstraintsGroup,PropertyWrapper.DefaultValueCategory.dialogue,K2Node_VariableGet.DefaultValueCategory.dialogue
+CapsuleComponent=BP_EnemyAI_C.Physics.ConstraintsGroup,BP_AI_v2_C.Physics.ConstraintsGroup,BP_AI_v2_C.TransformCommon.Transform,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform,CapsuleComponent.Physics.ConstraintsGroup,PropertyWrapper.DefaultValueCategory.dialogue,K2Node_VariableGet.DefaultValueCategory.dialogue
 EditorStyleSettings=EditorKeyboardShortcutSettings.EditorViewport.ShowTextureResolution,EditorKeyboardShortcutSettings.EditorViewport.ShowTextureScale,EditorKeyboardShortcutSettings.LevelEditor.OpenFavoriteFile,EditorKeyboardShortcutSettings.MainFrame.SwitchProject
 SlateThemeManager=
 AudioEditorSettings=EditorKeyboardShortcutSettings.EditorViewport.ShowTextureResolution,EditorKeyboardShortcutSettings.EditorViewport.ShowTextureScale,EditorKeyboardShortcutSettings.LevelEditor.OpenFavoriteFile,EditorKeyboardShortcutSettings.MainFrame.SwitchProject
@@ -383,7 +383,7 @@ GameplayTagsDeveloperSettings=EditorKeyboardShortcutSettings.EditorViewport.Show
 LogVisualizerSettings=EditorKeyboardShortcutSettings.EditorViewport.ShowTextureResolution,EditorKeyboardShortcutSettings.EditorViewport.ShowTextureScale,EditorKeyboardShortcutSettings.LevelEditor.OpenFavoriteFile,EditorKeyboardShortcutSettings.MainFrame.SwitchProject
 CharacterMovementComponent=BP_EnemyAI_C.Physics.ConstraintsGroup,BP_AI_v2_C.Physics.ConstraintsGroup,BP_AI_v2_C.TransformCommon.Transform,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform,CapsuleComponent.Physics.ConstraintsGroup
 EdGraphNode=BP_EnemyAI_C.Physics.ConstraintsGroup,SkeletalMeshComponent.Physics.ConstraintsGroup
-K2Node_VariableSet=BP_EnemyAI_C.Physics.ConstraintsGroup,BP_AI_v2_C.Physics.ConstraintsGroup,SkeletalMeshComponent.Physics.ConstraintsGroup,CapsuleComponent.Physics.ConstraintsGroup
+K2Node_VariableSet=BP_EnemyAI_C.Physics.ConstraintsGroup,BP_AI_v2_C.Physics.ConstraintsGroup,BP_AI_v2_C.TransformCommon.Transform,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform,CapsuleComponent.Physics.ConstraintsGroup,PropertyWrapper.DefaultValueCategory.dialogue
 StaticMeshActor=BP_EnemyAI_C.Physics.ConstraintsGroup,BP_AI_v2_C.Physics.ConstraintsGroup,BP_AI_v2_C.TransformCommon.Transform,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform,CapsuleComponent.Physics.ConstraintsGroup,PropertyWrapper.DefaultValueCategory.dialogue
 BP_Enemy_v2_C=BP_EnemyAI_C.Physics.ConstraintsGroup,SkeletalMeshComponent.Physics.ConstraintsGroup
 BP_Enemy_AI_v2_C=BP_EnemyAI_C.Physics.ConstraintsGroup,BP_Enemy_AI_v2_C.Physics.ConstraintsGroup,SkeletalMeshComponent.Physics.ConstraintsGroup
@@ -392,16 +392,17 @@ BP_AI_v2_C=BP_EnemyAI_C.Physics.ConstraintsGroup,BP_AI_v2_C.Physics.ConstraintsG
 NavMeshBoundsVolume=BP_EnemyAI_C.Physics.ConstraintsGroup,BP_AI_v2_C.Physics.ConstraintsGroup,SkeletalMeshComponent.Physics.ConstraintsGroup,CapsuleComponent.Physics.ConstraintsGroup
 BrushComponent=
 AB_AI_v2_C=BP_EnemyAI_C.Physics.ConstraintsGroup,SkeletalMeshComponent.Physics.ConstraintsGroup
-BP_ThirdPersonCharacter_C=BP_EnemyAI_C.Physics.ConstraintsGroup,BP_AI_v2_C.Physics.ConstraintsGroup,BP_AI_v2_C.TransformCommon.Transform,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform,CapsuleComponent.Physics.ConstraintsGroup,PropertyWrapper.DefaultValueCategory.dialogue
-K2Node_VariableGet=BP_EnemyAI_C.Physics.ConstraintsGroup,BP_AI_v2_C.Physics.ConstraintsGroup,BP_AI_v2_C.TransformCommon.Transform,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform,CapsuleComponent.Physics.ConstraintsGroup,PropertyWrapper.DefaultValueCategory.dialogue
+BP_ThirdPersonCharacter_C=BP_EnemyAI_C.Physics.ConstraintsGroup,BP_AI_v2_C.Physics.ConstraintsGroup,BP_AI_v2_C.TransformCommon.Transform,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform,CapsuleComponent.Physics.ConstraintsGroup,PropertyWrapper.DefaultValueCategory.dialogue,K2Node_VariableGet.DefaultValueCategory.dialogue
+K2Node_VariableGet=BP_EnemyAI_C.Physics.ConstraintsGroup,BP_AI_v2_C.Physics.ConstraintsGroup,BP_AI_v2_C.TransformCommon.Transform,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform,CapsuleComponent.Physics.ConstraintsGroup,PropertyWrapper.DefaultValueCategory.dialogue,K2Node_VariableGet.DefaultValueCategory.dialogue
 K2Node_CustomEvent=BP_EnemyAI_C.Physics.ConstraintsGroup,BP_AI_v2_C.Physics.ConstraintsGroup,BP_AI_v2_C.TransformCommon.Transform,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform,CapsuleComponent.Physics.ConstraintsGroup
-BP_NPC_TALK1_C=BP_EnemyAI_C.Physics.ConstraintsGroup,BP_AI_v2_C.Physics.ConstraintsGroup,BP_AI_v2_C.TransformCommon.Transform,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform,CapsuleComponent.Physics.ConstraintsGroup,PropertyWrapper.DefaultValueCategory.dialogue
+BP_NPC_TALK1_C=BP_EnemyAI_C.Physics.ConstraintsGroup,BP_AI_v2_C.Physics.ConstraintsGroup,BP_AI_v2_C.TransformCommon.Transform,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform,CapsuleComponent.Physics.ConstraintsGroup,PropertyWrapper.DefaultValueCategory.dialogue,K2Node_VariableGet.DefaultValueCategory.dialogue
 EdGraphNode_Comment=BP_EnemyAI_C.Physics.ConstraintsGroup,BP_AI_v2_C.Physics.ConstraintsGroup,BP_AI_v2_C.TransformCommon.Transform,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform,CapsuleComponent.Physics.ConstraintsGroup
 PropertyWrapper=BP_EnemyAI_C.Physics.ConstraintsGroup,BP_AI_v2_C.Physics.ConstraintsGroup,BP_AI_v2_C.TransformCommon.Transform,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform,CapsuleComponent.Physics.ConstraintsGroup,PropertyWrapper.DefaultValueCategory.dialogue
 WB_Dialogue_Test_C=BP_EnemyAI_C.Physics.ConstraintsGroup,BP_AI_v2_C.Physics.ConstraintsGroup,BP_AI_v2_C.TransformCommon.Transform,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform,CapsuleComponent.Physics.ConstraintsGroup,PropertyWrapper.DefaultValueCategory.dialogue
 PlayerStart=BP_EnemyAI_C.Physics.ConstraintsGroup,BP_AI_v2_C.Physics.ConstraintsGroup,BP_AI_v2_C.TransformCommon.Transform,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform,CapsuleComponent.Physics.ConstraintsGroup,PropertyWrapper.DefaultValueCategory.dialogue
 ABP_Manny_C=BP_EnemyAI_C.Physics.ConstraintsGroup,BP_AI_v2_C.Physics.ConstraintsGroup,BP_AI_v2_C.TransformCommon.Transform,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform,CapsuleComponent.Physics.ConstraintsGroup,PropertyWrapper.DefaultValueCategory.dialogue
 SphereComponent=BP_EnemyAI_C.Physics.ConstraintsGroup,BP_AI_v2_C.Physics.ConstraintsGroup,BP_AI_v2_C.TransformCommon.Transform,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform,CapsuleComponent.Physics.ConstraintsGroup,PropertyWrapper.DefaultValueCategory.dialogue
+K2Node_InputKey=BP_EnemyAI_C.Physics.ConstraintsGroup,BP_AI_v2_C.Physics.ConstraintsGroup,BP_AI_v2_C.TransformCommon.Transform,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform,CapsuleComponent.Physics.ConstraintsGroup,PropertyWrapper.DefaultValueCategory.dialogue
 
 [ContentBrowser]
 ContentBrowserTab1.SelectedPaths=/Game/Resources/CustomAnimations
@@ -479,7 +480,7 @@ LastLevel=/Game/ThirdPerson/Maps/ThirdPersonMap
 [DetailPropertyExpansion]
 WorldPartitionRuntimeSpatialHash="\"Object\" "
 WorldPartitionRuntimeHash="\"Object\" "
-Object="\"Object\" "
+Object="\"Object\" \"Object.SkeletalMeshes\" "
 FbxImportUI="\"Object\" "
 PersonaPreviewSceneDescription="\"Object\" "
 PreviewMeshCollection="\"Object\" \"Object.SkeletalMeshes\" "
@@ -494,8 +495,8 @@ MeshComponent="\"Object\" "
 PrimitiveComponent="\"Object\" "
 SceneComponent="\"Object\" "
 ActorComponent="\"Object\" "
-CapsuleComponent="\"Object\" "
-ShapeComponent="\"Object\" "
+CapsuleComponent="\"Object\" \"Object.Collision.BodyInstance\" "
+ShapeComponent="\"Object\" \"Object.Collision.BodyInstance\" "
 IKRetargeter="\"Object\" "
 GeneralProjectSettings="\"Object\" "
 CryptoKeysSettings="\"Object\" "
@@ -659,8 +660,8 @@ MediaPlayer="\"Object\" "
 SoundWave="\"Object\" "
 SoundBase="\"Object\" "
 BP_ThirdPersonCharacter_C="\"Object\" "
-Character="\"Object\" \"Object.Character.Mesh.Object.Lighting.LightingChannels\" \"Object.Character.Mesh.Object.Collision.BodyInstance\" \"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Shape.ShapeColor\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Actor.Tags\" "
-Pawn="\"Object\" \"Object.Character.Mesh.Object.Lighting.LightingChannels\" \"Object.Character.Mesh.Object.Collision.BodyInstance\" \"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Shape.ShapeColor\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Actor.Tags\" "
+Character="\"Object\" "
+Pawn="\"Object\" "
 BP_ThirdPersonCharacter_Enemy_C="\"Object\" \"Object.Actor.Tags\" "
 BP_EnemyAI_C="\"Object\" \"Object.Character.Mesh.Object.Lighting.LightingChannels\" \"Object.Character.Mesh.Object.Collision.BodyInstance\" \"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Shape.ShapeColor\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Pawn.Pawn|Input\" \"Object.Replication.ReplicatedMovement\" \"Object.Actor.Tags\" "
 PawnSensingComponent="\"Object\" "
@@ -761,7 +762,7 @@ Widget="\"Object\" \"Object.Appearance.Font\" \"Object.Appearance.StrikeBrush\" 
 Visual="\"Object\" \"Object.Appearance.Font\" \"Object.Appearance.StrikeBrush\" \"Object.Appearance.ShadowOffset\" \"Object.Appearance.ShadowColorAndOpacity\" \"Object.Appearance.Margin\" "
 CanvasPanel="\"Object\" "
 PanelWidget="\"Object\" "
-BP_NPC_TALK1_C="\"Object\" \"Object.Character.Mesh.Object.Lighting.LightingChannels\" \"Object.Character.Mesh.Object.Collision.BodyInstance\" \"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Shape.ShapeColor\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Actor.Tags\" "
+BP_NPC_TALK1_C="\"Object\" \"Object.dialogue\" "
 SphereComponent="\"Object\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]\" "
 TextBlock="\"Object\" \"Object.Appearance.Font\" \"Object.Appearance.StrikeBrush\" \"Object.Appearance.ShadowOffset\" \"Object.Appearance.ShadowColorAndOpacity\" \"Object.Appearance.Margin\" "
 TextLayoutWidget="\"Object\" \"Object.Appearance.Font\" \"Object.Appearance.StrikeBrush\" \"Object.Appearance.ShadowOffset\" \"Object.Appearance.ShadowColorAndOpacity\" \"Object.Appearance.Margin\" "
@@ -773,6 +774,7 @@ CleanShutdown=False
 OpenAssetsAtExit=/Game/Dialogue/BP_NPC_TALK1.BP_NPC_TALK1
 OpenAssetsAtExit=/Game/Dialogue/BPI_DIALOGUE_TEST.BPI_DIALOGUE_TEST
 OpenAssetsAtExit=/Game/Dialogue/WB_Dialogue_Test.WB_Dialogue_Test
+OpenAssetsAtExit=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter.BP_ThirdPersonCharacter
 
 [SlateAdditionalLayoutConfig]
 Viewport 1.LayoutType=FourPanes2x2
@@ -2329,7 +2331,7 @@ SphereComponent.Tags=True
 SphereComponent.ComponentReplication=True
 SphereComponent.Cooking=True
 SphereComponent.Events=True
-TextBlock.Layout=False
+TextBlock.Layout=True
 TextBlock.Content=True
 TextBlock.Appearance=True
 TextBlock.Accessibility=True
@@ -2502,6 +2504,7 @@ BP_EnemyAI_C.Character Movement: Jumping / Falling=True
 BP_EnemyAI_C.Character Movement: Swimming=False
 TextBlock.Appearance=True
 BackgroundBlur.Appearance=True
+TextBlock.Localization=True
 
 [PlacementMode]
 RecentlyPlaced=/Game/Dialogue/BP_NPC_TALK1.BP_NPC_TALK1;
@@ -2526,26 +2529,26 @@ RecentlyPlaced=/Game/Blender_Collections/Dragonslayer/skullRoughSmooth.skullRoug
 RecentlyPlaced=/Game/Blender_Collections/Dragonslayer/skullRough.skullRough;
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Dialogue/WB_Dialogue_Test
-MRUItem1=/Game/Dialogue/BPI_DIALOGUE_TEST
-MRUItem2=/Game/Dialogue/BP_NPC_TALK1
-MRUItem3=/Game/Resources/CustomAnimations/Dodge_Small_Forward_Roll_Montage
-MRUItem4=/Game/Characters/Mannequins/Animations/ABP_Manny
-MRUItem5=/Game/Resources/CustomAnimations/Dodge_Small_Forward_Roll
-MRUItem6=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter
-MRUItem7=/Game/Resources/BP_FootstepAnimNotify
-MRUItem8=/Game/ThirdPerson/AI/v2/BT_AI_v2
-MRUItem9=/Game/ThirdPerson/AI/v2/BP_AI_v2
-MRUItem10=/Game/ThirdPerson/AI/v2/AB_AI_v2
-MRUItem11=/Game/ThirdPerson/AI/v2/AI_Controller_v2
-MRUItem12=/Game/ThirdPerson/AI/v2/BlendSpace_AI_v2
-MRUItem13=/Game/WB_Test
-MRUItem14=/Game/WB_TextTest
-MRUItem15=/Game/ThirdPerson/AI/v2/BTTask_Attack
-MRUItem16=/Game/ThirdPerson/AI/Tasks/BTTask_ChasePlayer
-MRUItem17=/Game/ThirdPerson/AI/Tasks/BTTask_Roam
-MRUItem18=/Game/ThirdPerson/Blueprints/BP_EnemyAI
-MRUItem19=/Game/ThirdPerson/AI/v2/BTTask_ChasePlayer
+MRUItem0=/Game/Characters/Mannequins/Rigs/Poses/Quinn/Quinn_lowerarm_r_anim
+MRUItem1=/Game/Characters/Mannequins/Meshes/SKM_Quinn
+MRUItem2=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter
+MRUItem3=/Game/Dialogue/WB_Dialogue_Test
+MRUItem4=/Game/Dialogue/BPI_DIALOGUE_TEST
+MRUItem5=/Game/Dialogue/BP_NPC_TALK1
+MRUItem6=/Game/Resources/CustomAnimations/Dodge_Small_Forward_Roll_Montage
+MRUItem7=/Game/Characters/Mannequins/Animations/ABP_Manny
+MRUItem8=/Game/Resources/CustomAnimations/Dodge_Small_Forward_Roll
+MRUItem9=/Game/Resources/BP_FootstepAnimNotify
+MRUItem10=/Game/ThirdPerson/AI/v2/BT_AI_v2
+MRUItem11=/Game/ThirdPerson/AI/v2/BP_AI_v2
+MRUItem12=/Game/ThirdPerson/AI/v2/AB_AI_v2
+MRUItem13=/Game/ThirdPerson/AI/v2/AI_Controller_v2
+MRUItem14=/Game/ThirdPerson/AI/v2/BlendSpace_AI_v2
+MRUItem15=/Game/WB_Test
+MRUItem16=/Game/WB_TextTest
+MRUItem17=/Game/ThirdPerson/AI/v2/BTTask_Attack
+MRUItem18=/Game/ThirdPerson/AI/Tasks/BTTask_ChasePlayer
+MRUItem19=/Game/ThirdPerson/AI/Tasks/BTTask_Roam
 
 [AssetEditorToolkitTabLocation]
 /Game/Characters/Great_Sword_Pack/greatswordattack_UE.greatswordattack_UE=1
@@ -2600,6 +2603,8 @@ MRUItem19=/Game/ThirdPerson/AI/v2/BTTask_ChasePlayer
 /Game/Dialogue/WB_Dialogue_Test.WB_Dialogue_Test=0
 /Game/Resources/CustomAnimations/Dodge_Small_Forward_Roll.Dodge_Small_Forward_Roll=1
 /Game/Resources/CustomAnimations/Dodge_Small_Forward_Roll_Montage.Dodge_Small_Forward_Roll_Montage=1
+/Game/Characters/Mannequins/Meshes/SKM_Quinn.SKM_Quinn=1
+/Game/Characters/Mannequins/Rigs/Poses/Quinn/Quinn_lowerarm_r_anim.Quinn_lowerarm_r_anim=1
 
 [/Script/PinnedCommandList.PinnedCommandListSettings]
 Contexts=(Name="AnimationEditor",Commands=)
