Implemented secondary attack and checks
Hold right click, then left. Checks in place so other attacks aren't interrupted beyond the new one. Debating on making a check for that or have it only interrupted by dodge roll

--- a/TwoBigSwords/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/TwoBigSwords/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -381,7 +381,7 @@ DataValidationSettings=EditorKeyboardShortcutSettings.EditorViewport.ShowTexture
 GameplayDebuggerUserSettings=EditorKeyboardShortcutSettings.EditorViewport.ShowTextureResolution,EditorKeyboardShortcutSettings.EditorViewport.ShowTextureScale,EditorKeyboardShortcutSettings.LevelEditor.OpenFavoriteFile,EditorKeyboardShortcutSettings.MainFrame.SwitchProject
 GameplayTagsDeveloperSettings=EditorKeyboardShortcutSettings.EditorViewport.ShowTextureResolution,EditorKeyboardShortcutSettings.EditorViewport.ShowTextureScale,EditorKeyboardShortcutSettings.LevelEditor.OpenFavoriteFile,EditorKeyboardShortcutSettings.MainFrame.SwitchProject
 LogVisualizerSettings=EditorKeyboardShortcutSettings.EditorViewport.ShowTextureResolution,EditorKeyboardShortcutSettings.EditorViewport.ShowTextureScale,EditorKeyboardShortcutSettings.LevelEditor.OpenFavoriteFile,EditorKeyboardShortcutSettings.MainFrame.SwitchProject
-CharacterMovementComponent=BP_EnemyAI_C.Physics.ConstraintsGroup,BP_AI_v2_C.Physics.ConstraintsGroup,BP_AI_v2_C.TransformCommon.Transform,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform,CapsuleComponent.Physics.ConstraintsGroup
+CharacterMovementComponent=BP_EnemyAI_C.Physics.ConstraintsGroup,BP_AI_v2_C.Physics.ConstraintsGroup,BP_AI_v2_C.TransformCommon.Transform,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform,CapsuleComponent.Physics.ConstraintsGroup,PropertyWrapper.DefaultValueCategory.dialogue
 EdGraphNode=BP_EnemyAI_C.Physics.ConstraintsGroup,BP_AI_v2_C.Physics.ConstraintsGroup,BP_AI_v2_C.TransformCommon.Transform,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform,CapsuleComponent.Physics.ConstraintsGroup,PropertyWrapper.DefaultValueCategory.dialogue,K2Node_VariableGet.DefaultValueCategory.dialogue
 K2Node_VariableSet=BP_EnemyAI_C.Physics.ConstraintsGroup,BP_AI_v2_C.Physics.ConstraintsGroup,BP_AI_v2_C.TransformCommon.Transform,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform,CapsuleComponent.Physics.ConstraintsGroup,PropertyWrapper.DefaultValueCategory.dialogue
 StaticMeshActor=BP_EnemyAI_C.Physics.ConstraintsGroup,BP_AI_v2_C.Physics.ConstraintsGroup,BP_AI_v2_C.TransformCommon.Transform,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform,CapsuleComponent.Physics.ConstraintsGroup,PropertyWrapper.DefaultValueCategory.dialogue
@@ -498,7 +498,7 @@ SkinnedMeshComponent="\"Object\" "
 MeshComponent="\"Object\" "
 PrimitiveComponent="\"Object\" \"Object.Collision.BodyInstance\" "
 SceneComponent="\"Object\" \"Object.Collision.BodyInstance\" "
-ActorComponent="\"Object\" \"Object.Collision.BodyInstance\" "
+ActorComponent="\"Object\" "
 CapsuleComponent="\"Object\" \"Object.Collision.BodyInstance\" "
 ShapeComponent="\"Object\" \"Object.Collision.BodyInstance\" "
 IKRetargeter="\"Object\" "
@@ -623,10 +623,10 @@ MaterialInterface="\"Object\" "
 VolumetricCloudComponent="\"Object\" "
 Blueprint="\"Object\" "
 BlueprintCore="\"Object\" "
-CharacterMovementComponent="\"Object\" \"Object.Character Movement (Rotation Settings).RotationRate\" "
-PawnMovementComponent="\"Object\" \"Object.Character Movement (Rotation Settings).RotationRate\" "
-NavMovementComponent="\"Object\" \"Object.Character Movement (Rotation Settings).RotationRate\" "
-MovementComponent="\"Object\" \"Object.Character Movement (Rotation Settings).RotationRate\" "
+CharacterMovementComponent="\"Object\" "
+PawnMovementComponent="\"Object\" "
+NavMovementComponent="\"Object\" "
+MovementComponent="\"Object\" "
 BoneProxy="\"Object\" "
 SkeletalMeshSocket="\"Object\" "
 StaticMeshComponent="\"Object\" "
